--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
-    "eslint": "8.44.0",
+    "eslint": "^7.23.0",
     "eslint-config-next": "^12.0.4",
     "next": "13.4.7",
     "postcss": "8.4.24",
